--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
     <div id="body">
 
         <div id="clicker_container">
-        <button id="skibidi_button"><img src="skibidi.png"></img></button>
+            <h1 id="click_per_second">
+                1.0 Skibidi Bucks Per Click
+            </h1>
+            <button id="skibidi_button">
+                <img src="skibidi.png" id="skibidi"></img>
+            </button>
         </div>
 
         <div id="UI">
-        <h1 id="counter">0</h1>
+            <h1 id="counter">
+                0.0 Skibidi Bucks
+            </h1>
 
-        <div>
-            <button class="button" id="upgrade1">Upgrade: 10 Skibidi Bucks</button>
-        </div>
+            <div>
+                <button class="button" id="button1">
+                    10 Skibidi Bucks
+                </button>
+                <label for="button" id="upgrade1">Upgrade Toilet Touch | LVL: 1</label>
+            </div>
+
         </div>
 
     </div>
