--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1 id="click_per_second">
                 1.0 Skibidi Bucks Per Click
             </h1>
-            <button id="skibidi_button">
+            <button id="skibidi_button" type="button">
                 <img src="skibidi.png" id="skibidi"></img>
             </button>
         </div>
@@ -26,9 +26,16 @@
 
             <div>
                 <button class="button" id="button1">
-                    10 Skibidi Bucks
+                    100 Skibidi Bucks
                 </button>
-                <label for="button" id="upgrade1">Upgrade Toilet Touch | LVL: 1</label>
+                <label for="button" id="upgrade1" class="labels">Upgrade Toilet Touch | LVL: 1</label>
+
+                <br>
+
+                <button class="button" id="button2">
+                    1000 Skibidi Bucks
+                </button>
+                <label for="button" id="upgrade2" class="labels">Upgrade Diddy Fest| LVL: 1</label>
             </div>
 
         </div>
