--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                 <label for="button" id="upgrade2" class="labels">Upgrade Diddy Fest| LVL: 1</label>
             </div>
 
+            <button id="save" class="settings">
+                Save
+            </button>
+
+            <button id="load" class="settings">
+                Load
+            </button>
+
         </div>
 
     </div>
