--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div id="body">
+    <div id="container">
 
         <div id="clicker_container">
             <h1 id="click_per_second">
