--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
                 Load
             </button>
 
+            <button id="reset" class="settings">
+                Reset
+            </button>
+
         </div>
 
     </div>
