--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
     <div id="container">
 
         <div id="clicker_container">
-            <h1 id="click_per_second">
+            <h1 id="money_per_click">
                 1.0 Skibidi Bucks Per Click
+            </h1>
+
+            <h1 id="money_per_second">
+                0 Skibidi Bucks Per Second
             </h1>
             <button id="skibidi_button" type="button">
                 <img src="skibidi.png" id="skibidi"></img>
@@ -20,23 +24,39 @@
         </div>
 
         <div id="UI">
+
             <h1 id="counter">
                 0.0 Skibidi Bucks
             </h1>
 
             <div>
+                <h1>Button Upgrades: </h1>
                 <button class="button" id="button1">
-                    100 Skibidi Bucks
+                    1000 Skibidi Bucks
                 </button>
                 <label for="button" id="upgrade1" class="labels">Upgrade Toilet Touch | LVL: 1</label>
 
                 <br>
 
                 <button class="button" id="button2">
-                    1000 Skibidi Bucks
+                    10000 Skibidi Bucks
                 </button>
                 <label for="button" id="upgrade2" class="labels">Upgrade Diddy Fest| LVL: 1</label>
             </div>
+
+            <br>
+
+            <div>
+                <h1>Idle Upgrades: </h1>
+                <button class="button" id="button3">
+                    100 Skibidi Bucks
+                </button>
+                <label for="button" id="upgrade3" class="labels">Upgrade Auto Tickler | LVL: 1</label>
+
+                <br>
+            </div>
+
+            <br>
 
             <button id="save" class="settings">
                 Save
