--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
     <div id="container">
 
         <div id="clicker_container">
-            <h1 id="money_per_click">
+            <button id="options">Options</button>
+
+            <h1 id="money_per_click" class="money_counter">
                 1.0 Skibidi Bucks Per Click
             </h1>
 
-            <h1 id="money_per_second">
+            <h1 id="money_per_second" class="money_counter">
                 0 Skibidi Bucks Per Second
             </h1>
             <button id="skibidi_button" type="button">
@@ -58,6 +60,18 @@
 
             <br>
 
+        </div>
+
+
+        <div class="menu" id="settingMenu">
+            <button id="close">Close</button>
+
+            <br>
+
+            <h3>Settings</h3>
+
+            <br>
+
             <button id="save" class="settings">
                 Save
             </button>
@@ -70,6 +84,7 @@
                 Reset
             </button>
 
+            
         </div>
 
     </div>
