--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             <h1 id="money_per_second" class="money_counter">
                 0 Skibidi Bucks Per Second
             </h1>
+
+            <br>
+            
+            <h1 id="money_multiplier" class="money_counter">Multiplier: 1x</h1>
+
             <button id="skibidi_button" type="button">
                 <img src="skibidi.png" id="skibidi"></img>
             </button>
@@ -34,16 +39,16 @@
             <div>
                 <h1>Button Upgrades: </h1>
                 <button class="button" id="button1">
-                    1000 Skibidi Bucks
+                    500 Skibidi Bucks
                 </button>
-                <label for="button" id="upgrade1" class="labels">Upgrade Toilet Touch | LVL: 1</label>
+                <label for="button" id="upgrade1" class="labels">Upgrade Toilet Touch | LVL: 0</label>
 
                 <br>
 
                 <button class="button" id="button2">
-                    10000 Skibidi Bucks
+                    5000 Skibidi Bucks
                 </button>
-                <label for="button" id="upgrade2" class="labels">Upgrade Diddy Fest| LVL: 1</label>
+                <label for="button" id="upgrade2" class="labels">Upgrade Diddy Fest| LVL: 0</label>
             </div>
 
             <br>
@@ -53,12 +58,15 @@
                 <button class="button" id="button3">
                     100 Skibidi Bucks
                 </button>
-                <label for="button" id="upgrade3" class="labels">Upgrade Auto Tickler | LVL: 1</label>
+                <label for="button" id="upgrade3" class="labels">Upgrade Auto Tickler | LVL: 0</label>
 
                 <br>
             </div>
 
             <br>
+
+            <button id="rebirth_button">Rebirth</button>
+            <label class="labels" for="rebirth_button" id="rebirthLevel">Rebirths | 0</label>
 
         </div>
 
@@ -85,6 +93,25 @@
             </button>
 
             
+        </div>
+
+        <div id="bossFight">
+            <h2 id="bossFightText">CLICK A RANDOM BUTTON TO KILL KANYE WEST</h2>
+
+            <br>
+
+            <img src="kanye east.png" id="kanye">
+
+            <br>
+
+            <button id="bossFightOption1" class="bossFightOptions">1</button>
+            <button id="bossFightOption2" class="bossFightOptions">2</button>
+            <button id="bossFightOption3" class="bossFightOptions">3</button>
+            <button id="bossFightOption4" class="bossFightOptions">4</button>
+            <button id="bossFightOption5" class="bossFightOptions">5</button>
+            <button id="bossFightOption6" class="bossFightOptions">6</button>
+
+
         </div>
 
     </div>
