--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             <button id="skibidi_button" type="button">
                 <img src="skibidi.png" id="skibidi"></img>
             </button>
+            <br>
+            <button>Change Button Image (WIP)</button>
         </div>
 
         <div id="UI">
