--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img src="skibidi.png" id="skibidi"></img>
             </button>
             <br>
-            <button>Change Button Image (WIP)</button>
+            <button id="imageChangeOption">Change Button Image</button>
         </div>
 
         <div id="UI">
@@ -120,6 +120,24 @@
             <button id="bossFightOption6" class="bossFightOptions">6</button>
 
 
+        </div>
+
+        <div id="buttonChanger">
+            <button id="closeImageChanger">X</button>
+
+            <br>
+
+            <h3>Button Icons!</h3>
+
+            <br>
+
+            <button id="skibidiOption"><img src="skibidi.png" height="50px" width="50px"></button>
+            <label for="skibidiOption" class="buttonOptionLabel">Skibidi Icon: Default</label>
+
+            <br>
+
+            <button id="kanyeOption"><img src="kanye east.png" height="50px" width="50px"></button>
+            <label for="kanyeOption" class="buttonOptionLabel">Kanye Icon: Need to rebirth once!</label>
         </div>
 
     </div>
